refactor tests , add right docker config